k8s/minikube/common/rabbitmq/deploy-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridcapa-rabbitmq
  labels:
    app: gridcapa
    component: gridcapa-rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 15672
    - name: prometheus
      protocol: TCP
      port: 15692
    - name: amqp
      protocol: TCP
      port: 5672
  selector:
    app: gridcapa
    component: gridcapa-rabbitmq
---
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: gridcapa-rabbitmq
    labels:
      app: gridcapa
      component: gridcapa-rabbitmq
  spec:
    selector:
      matchLabels:
        app: gridcapa
        component: gridcapa-rabbitmq
    # headless service that gives network identity to the RMQ nodes, and enables them to cluster
    serviceName: gridcapa-rabbitmq # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set. Pods get DNS/hostnames that follow the pattern: pod-specific-string.serviceName.default.svc.cluster.local where "pod-specific-string" is managed by the StatefulSet controller.
    replicas: 1
    template:
      metadata:
        name: gridcapa-rabbitmq
        labels:
          app: gridcapa
          component: gridcapa-rabbitmq
      spec:
        containers:
          - name: rabbitmq
            image: rabbitmq:management
            volumeMounts:
              - name: gridcapa-rabbitmq-data
                mountPath: "/var/lib/rabbitmq/mnesia"
              - name: gridcapa-rabbitmq-configmap-volume
                subPath: rabbitmq.conf
                mountPath: /etc/rabbitmq/rabbitmq.conf

            ports:
              - name: amqp
                containerPort: 5672
                protocol: TCP
              - name: management
                containerPort: 15672
                protocol: TCP
              - name: prometheus
                containerPort: 15692
                protocol: TCP
              - name: epmd
                containerPort: 4369
                protocol: TCP
            resources:
              requests:
                cpu: "2.0"
                memory: "1Gi"
            livenessProbe:
              exec:
                # This is just an example. There is no "one true health check" but rather
                # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
                # and intrusive health checks.
                # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
                #
                # Stage 2 check:
                command: ["rabbitmq-diagnostics", "status"]
              initialDelaySeconds: 60
              # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
              periodSeconds: 60
              timeoutSeconds: 15
            readinessProbe: # probe to know when RMQ is ready to accept traffic
              exec:
                # This is just an example. There is no "one true health check" but rather
                # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
                # and intrusive health checks.
                # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
                #
                # Stage 1 check:
                command: ["rabbitmq-diagnostics", "ping"]
              initialDelaySeconds: 20
              periodSeconds: 60
              timeoutSeconds: 10
        volumes:
          - name: gridcapa-rabbitmq-configmap-volume
            configMap:
              name: gridcapa-rabbitmq-configmap
          - name: gridcapa-rabbitmq-data
            persistentVolumeClaim:
              claimName: gridcapa-rabbitmq-data
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: rabbitmq
  labels:
    app: gridcapa
    component: gridcapa
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rabbitmq.farao-local-community.com
      secretName: gridcapa-tls
  rules:
    - host: rabbitmq.farao-local-community.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gridcapa-rabbitmq
                port:
                  number: 15672
